add api doc for department
